# dvo

./: README.md
dvo_benchmark/: CMakeLists.txt  package.xml
dvo_benchmark/src/: benchmark.cpp
dvo_core/: CMakeLists.txt  OrigCMakeLists.txt  OrigPackage.xml  package.xml
dvo_core/include/dvo/: dense_tracking.h  dense_tracking_impl.h
dvo_core/include/dvo/core/: assert.h  interpolation.h  intrinsic_matrix.h  least_squares.h  macros.h  math_sse.h  point_selection.h  rgbd_image.h  surface_pyramid.h  weight_calculation.h
dvo_core/include/dvo/util/: histogram.h  id_generator.h
dvo_core/include/dvo/visualization/: async_point_cloud_builder.h  camera_trajectory_visualizer.h  object_trajectory_visualizer.h  pcl_camera_trajectory_visualizer.h  point_cloud_aggregator.h
dvo_core/src/: dense_tracking.cpp  dense_tracking_config.cpp  dense_tracking_impl.cpp  sse_test.cpp
dvo_core/src/core/: interpolation.cpp  intrinsic_matrix.cpp  least_squares.cpp  math_sse.cpp  point_selection.cpp  rgbd_image.cpp  rgbd_image_sse.cpp  surface_pyramid.cpp  weight_calculation.cpp
dvo_core/src/util/: histogram.cpp  id_generator.cpp
dvo_core/src/visualization/: async_point_cloud_builder.cpp  camera_trajectory_visualizer.cpp  object_trajectory_visualizer.cpp  pcl_camera_trajetory_visualizer.cpp  point_cloud_aggregator.cpp
dvo_ros/: CMakeLists.txt  OrigCMakeLists.txt  OrigPackage.xml  package.xml
dvo_ros/cfg/: dvo_ros.cfg
dvo_ros/cfg/cpp/dvo_ros/: CameraDenseTrackerConfig.h
dvo_ros/docs/: CameraDenseTrackerConfig-usage.dox  CameraDenseTrackerConfig.dox  CameraDenseTrackerConfig.wikidoc
dvo_ros/include/dvo_ros/: CameraDenseTrackerConfig.h  camera_base.h  camera_dense_tracking.h  camera_tracker_nodelet.h  dvo_ros
dvo_ros/include/dvo_ros/util/: configtools.h  util.h
dvo_ros/include/dvo_ros/visualization/: ros_camera_trajectory_visualizer.h
dvo_ros/launch/: debug.launch  quickstart.launch  run.launch
dvo_ros/src/: camera_base.cpp  camera_dense_tracking.cpp  camera_tracker_node.cpp  camera_tracker_nodelet.cpp
dvo_ros/src/dvo_ros/cfg/: CameraDenseTrackerConfig.py
dvo_ros/src/visualization/: ros_camera_trajectory_visualizer.cpp
dvo_tracking/: CMakeLists.txt  OrigCMakeLists.txt  OrigPackage.xml  TRACE.txt  nodelet_plugins.xml  package.xml  tracing_results.txt
dvo_tracking/cfg/: DvoTracking.cfg  dvo_tracking.rviz
dvo_tracking/cfg/cpp/dvo_tracking/: CameraDenseTrackerConfig.h
dvo_tracking/docs/: CameraDenseTrackerConfig-usage.dox
dvo_tracking/include/dvo_tracking/: CameraDenseTrackerConfig.h  camera_base.h  camera_dense_tracking.h  depth_test.h  depth_tracker_nodelet.h  shit.h
dvo_tracking/include/dvo_tracking/util/: configtools.h  util.h
dvo_tracking/include/dvo_tracking/visualization/: ros_camera_trajectory_visualizer.h
dvo_tracking/launch/: debug.launch  quickstart.launch  run.launch  rviz.vcg
dvo_tracking/src/: camera_base.cpp  camera_dense_tracking.cpp  depth_node.cpp  depth_test.cpp  depth_test_orig.cpp  depth_tracker_node.cpp  depth_tracker_nodelet.cpp  fake_subscriber.cpp  show_tracking.cpp
dvo_tracking/src/dvo_ros/cfg/: CameraDenseTrackerConfig.py
dvo_tracking/src/dvo_tracking/cfg/: CameraDenseTrackerConfig.py
dvo_tracking/src/visualization/: ros_camera_trajectory_visualizer.cpp
