<?xml version="1.0"?>
<package format="2">
  <name>dvo_tracking</name>
  <version>0.1.0</version>
  <description>The dvo_tracking package</description>

  <maintainer email="llorrain@ualberta.ca">Laura Petrich</maintainer>
  <license>GPL</license>
  <url>http://ros.org/wiki/dvo_tracking</url>
  <author>Christian Kerl</author>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>dynamic_reconfigure</depend>
  <depend>nodelet</depend>
  <depend>tf</depend>
  <depend>tf_conversions</depend>
  <depend>geometry_msgs</depend>
  <depend>eigen_conversions</depend>
  <depend>pcl_ros</depend>
  <depend>sensor_msgs</depend>
  <depend>image_transport</depend>
  <depend>message_filters</depend>
  <depend>cv_bridge</depend>
  <depend>visualization_msgs</depend>
  <depend>interactive_markers</depend>
  <depend>cmake_modules</depend>

  <export>
      <nodelet plugin="${prefix}/nodelet_plugins.xml" />
  </export>
  
</package>
 